--- a/main.html
+++ b/main.html
@@ -5,11 +5,28 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+	<h2>HTML Assignment #</h2>
+	<table class="middle" id="table-1">
+		<tr id="t11">
+			<td>left</td>
+			<td class="center">center</td>
+            <td class="right">right</td>
+		</tr>
+
+		<tr id="t12">
+			<td>left</td>
+			<td class="center">center</td>
+            <td class="right">right</td>
+		</tr>
+
+		<tr id="t13">
+			<td>left</td>
+			<td class="center">center</td>
+            <td class="right">right</td>
+		</tr>
+	</table>
 
 </body>
 
